feat: local dev setup
